[gd_scene load_steps=3 format=3 uid="uid://gvv7h3nmtouk"]

[ext_resource type="FontFile" uid="uid://dfbh8en1cype4" path="res://Fonts/Born2bSportyV2.ttf" id="1_2kjv6"]
[ext_resource type="Script" path="res://Scenes/options_menu.gd" id="1_7wbml"]

[node name="OptionsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7wbml")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.384314, 0.807843, 0.121569, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("1_2kjv6")
theme_override_font_sizes/font_size = 136
text = "Options"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_2kjv6")
theme_override_font_sizes/font_size = 71
text = "Scores Reset!"
horizontal_alignment = 1

[node name="ButtonContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 66
text = "Reset Score"

[node name="Button2" type="Button" parent="MarginContainer/VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 66
text = "Return to Menu"

[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonContainer/Button2" to="." method="_on_button_2_pressed"]
